--- a/public/locales/fi/translation.json
+++ b/public/locales/fi/translation.json
@@ -7,10 +7,10 @@
   "Premises": "",
   "Search libraries": "",
   "Search services": "",
-  "Self Service": "",
   "Services": "",
-  "Staff Present": "",
   "Web service": "",
+  "self-service": "",
   "show less": "",
-  "show more": ""
+  "show more": "",
+  "staff present": ""
 }
