Translate page title

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,6 +3,7 @@
   "Collections": "Collections",
   "Contact information": "Contact information",
   "Devices": "Devices",
+  "Kirjasto - Interactive map of Helsinki area libraries": "Kirjasto - Interactive map of Helsinki area libraries",
   "Opening hours": "Opening hours",
   "Premises": "Premises",
   "Search libraries": "Search libraries",
