--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,6 +3,7 @@
   "Collections": "",
   "Contact information": "",
   "Devices": "",
+  "Kirjasto - Interactive map of Helsinki area libraries": "",
   "Opening hours": "",
   "Premises": "",
   "Search libraries": "",
